--- a/Classification/results/dataset1/model_outputs_imb/config_dataset1_imb.yaml
+++ b/Classification/results/dataset1/model_outputs_imb/config_dataset1_imb.yaml
@@ -1,9 +1,9 @@
 output:
-  results_dir: 'results/dataset1/model_outputs'
+  results_dir: 'results/dataset1/model_outputs_imb'
 dataset:
   name: 'bank_campaign'
   file_path: 'data/dataset1/raw/Bank_Campaign.csv'
-  output_dir: 'data/dataset1/processed'
+  output_dir: 'data/dataset1/processed_imb'
   target_column: 'subscribed'
   rerun: False
   num_features:
