--- a/Classification/dataset1_config/config2_dataset1.yaml
+++ b/Classification/dataset1_config/config2_dataset1.yaml
@@ -5,7 +5,7 @@ dataset:
   file_path: 'data/dataset1/raw/Bank_Campaign.csv'
   output_dir: 'data/dataset1/processed'
   target_column: 'subscribed'
-  rerun: False
+  rerun: True
   num_features:
     - 'age'
     - 'duration'
@@ -33,11 +33,11 @@ dataset:
 models:
   knn:
     param_grid:
-      'n_neighbors': [20]
+      'n_neighbors': [5]
       'weights': [ 'uniform', 'distance' ]
   nn:
     param_grid:
-      'hidden_layer_sizes': [[32, 5]]
+      'hidden_layer_sizes': [[32, 30]]
       'learning_rate': ['adaptive']
       'learning_rate_init': [1.0, 0.5, 0.1, 0.08, 0.06, 0.04, 0.02, 0.01, .005, .001, .0005, .0001]
 
