--- a/Classification/dataset2_configs/config_bert_384.yml
+++ b/Classification/dataset2_configs/config_bert_384.yml
@@ -1,11 +1,12 @@
 dataset:
   name: 'nlp'
   file_path: 'data/dataset2/raw/Youtube-Spam-Dataset.csv'
-  output_dir: 'data/dataset2/processed/transformer_128'
+  output_dir: 'data/dataset2/processed/transformer_384'
   embedding_method: 'transformer'
-  rerun: True
+  rerun: False
   embedding_config:
-    max_seq_length: 128
+    max_seq_length: 500
+    model_name: 'paraphrase-MiniLM-L3-v2'
 
 models:
   knn:
@@ -18,7 +19,7 @@ models:
       'gamma': ['scale', 'auto', 0.1, 0.01]
   nn:
     param_grid:
-      'hidden_layer_sizes': [ [50], [100], [150], [200], [250], [300], [350], [400], [450], [500], [250, 50], [250, 100], [250, 150] ]
+      'hidden_layer_sizes': [[20], [40], [60], [80], [100], [120], [60, 20], [60, 40], [60, 60]]
       'learning_rate': ['adaptive']
       'learning_rate_init': [1.0, 0.5, 0.1, 0.08, 0.06, 0.04, 0.02, 0.01, .005, .001, .0005, .0001]
   boosting:
@@ -28,4 +29,4 @@ models:
 random_state: 17
 cross_validation:
     n_splits: 5
-model_output_dir: 'results/dataset2/model_outputs_bert_128'
+model_output_dir: 'results/dataset2/model_outputs_bert_384'
